test/invalid/InvalidOperator/InvalidOperator.plume
/**
 * There is an invalid operator
 *
 * @author 37017, Joao Ramalho
 * @version $Id: InvalidOperator.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
class InvalidOperator extends Object is

  field radius : Integer
  
  method radius : () -> Boolean is
    radius => 3